--- a/admin/view/stylesheet/module/addressy.less
+++ b/admin/view/stylesheet/module/addressy.less
@@ -7,6 +7,7 @@
     margin-bottom: 3rem;
     margin-right: auto;
     max-width: 1024px;
+    font-size: 14px;
 
     .box-frame {
         background-color: #fff;
@@ -28,6 +29,10 @@
         margin-top:2px;
         margin-bottom:2px;
         border-top: 1px solid #dedede;
+    }
+
+    #btnLogOut {
+        width: 120px;
     }
 
     .button-dark {
@@ -108,12 +113,12 @@
     @media (max-width: 520px) {
 
         .button-dark {
-            width: 100%;
+            width: 100% !important;
             margin: 5px 0px;
         }
 
         .button-light {
-            width: 100%;
+            width: 100% !important;
             margin: 5px 0px;
         }
     }
@@ -234,6 +239,7 @@
     border: 1px solid #d0d4d8;
     padding: 10px;
     display: inline-block;
+    font-size: 12px;
 
     &.switch-left {
 
