Added ignore for generated css and styling tweak.

--- a/admin/view/stylesheet/module/addressy.less
+++ b/admin/view/stylesheet/module/addressy.less
@@ -163,6 +163,7 @@
 
     *:focus {
         box-shadow: none;
+        outline: none;
     }
 
     .addressy-message-container {
@@ -232,6 +233,7 @@
 
 .switch {
     width: 50px;
+    height: 40px;
     text-align: center;
     color: black;
     background-color: #ecedf1;
